Correcion video youtube

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ProyectoFinalHBO</string>
+    <string name="sinopsis">Mitad humano, mitad atlante, Arthur Curry es un habitante del poderoso reino subacuático de la Atlántida criado por un hombre humano y considerado un paria por los suyos. Arthur emprenderá un viaje que le ayudará a descubrir si es digno de cumplir con su destino: ser rey y convertirse en Aquaman.</string>
 </resources>
